Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16125

Shutdown crash when innodb_force_recovery >= 2

Details

    Description

      During shutdown, InnoDB master thread encounters the shutdown state as SRV_SHUTDOWN_FLUSH_PHASE or SRV_SHUTDOWN_LAST_PHASE.
      srv_active_wake_master_thread_low() is used during ha_innobase::close().
      It wakes the master thread.

      But scheduling or waking up of master thread happened after shutdown state is set to SRV_SHUTDOWN_FLUSH_PHASE and it leads to crash in shutdown

      Attachments

        Issue Links

          Activity

            People

              thiru Thirunarayanan Balathandayuthapani
              thiru Thirunarayanan Balathandayuthapani
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.